<resources>
    <string name="app_name">Github User App</string>

    <string name="real_name">Real Name</string>
    <string name="user_name">User Name</string>
    <string name="user_location">Location</string>
    <string name="user_repo">Repositories</string>
    <string name="repo_value">repository_v</string>
    <string name="user_followers">Followers</string>
    <string name="user_following">Following</string>
    <string name="followers_value">followers_v</string>
    <string name="following_value">following_v</string>
    <string name="user_company">Company</string>

    <string name="bio">Bio</string>
    <string name="loading_screen_text">Github User App</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="company">Company</string>
    <string name="repository">repository</string>
    <string name="repository_value">repository_v</string>
    <string name="profile_image">profileImage</string>
    <string name="blog">Blog</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="tabs">tabs</string>

    <string name="search_text">Search Github User</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="text_failed_load">Failed to load data, Please try again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>