<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/detailBackground"
     android:fitsSystemWindows="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
     tools:context=".ui.userdetail.DetailUserActivity">

    <LinearLayout
        android:id="@+id/detail_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_failed_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:text="@string/no_internet"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_detail_failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:text="@string/text_failed_load"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/pb_detail_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_detail_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_detail_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/user_name"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@+id/img_detail_photo"
                    app:layout_constraintTop_toTopOf="@+id/img_detail_photo" />

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/real_name"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_detail_username"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@+id/img_detail_photo"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_username" />

                <TextView
                    android:id="@+id/tv_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/user_location"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

                <TextView
                    android:id="@+id/tv_detail_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:lines="2"
                    android:text="@string/company"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_company"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_location"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_location" />

                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/repository"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@+id/tv_repository_value"
                    app:layout_constraintTop_toTopOf="@+id/tv_repository_value" />

                <TextView
                    android:id="@+id/tv_repository_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/repository_value"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@+id/img_detail_photo"
                    app:layout_constraintTop_toBottomOf="@+id/tv_followers_value" />

                <TextView
                    android:id="@+id/tv_detail_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="12dp"
                    android:lines="2"
                    android:maxLines="2"
                    android:text="@string/bio"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/img_detail_photo"
                    app:layout_constraintTop_toBottomOf="@+id/img_detail_photo" />

                <TextView
                    android:id="@+id/tv_followers_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/followers_value"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@+id/img_detail_photo"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_blog" />

                <TextView
                    android:id="@+id/tv_user_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/followers"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@+id/tv_followers_value"
                    app:layout_constraintTop_toTopOf="@+id/tv_followers_value" />

                <TextView
                    android:id="@+id/tv_following_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:drawablePadding="8dp"
                    android:text="@string/following_value"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_circle_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@+id/tv_user_followers"
                    app:layout_constraintTop_toTopOf="@+id/tv_user_followers" />

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/following"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@+id/tv_following_value"
                    app:layout_constraintTop_toTopOf="@+id/tv_following_value" />

                <TextView
                    android:id="@+id/tv_detail_blog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:text="@string/blog"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@+id/img_detail_photo"
                    app:layout_constraintTop_toBottomOf="@+id/img_detail_photo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/graytheme"
                android:contentDescription="@string/tabs"
                app:tabTextColor="@color/white"
                tools:layout_editor_absoluteY="347dp" />

        </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/detailBackground" />

    </ScrollView>

</LinearLayout>